--- a/Mine/6_hover.html
+++ b/Mine/6_hover.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<div id="box">
-		<div>你还</div>
+		<div>你好啊次友温</div>
 	</div>
 	<script src="jquery-3.2.1.js"></script>
 	<script>
