--- a/Mine/7_autohtml.html
+++ b/Mine/7_autohtml.html
@@ -44,7 +44,7 @@
             };
             //alert(docEl)
           if (!doc.addEventListener) return;
-          win.addEventListener(resizeEvt, recalc, false);//addEventListener事件方法接受三个参数：第一个是事件名称比如点击事件onclick，第二个是要执行的函数，第三个是布尔值
+          win.addEventListener(resizeEvt, recalc, false);//addEventListener事件方法接受三个参数：第一个是事件名称比如点击事件onclick，第二个是要执行的函数，第三个是布尔值(指定事件是否在捕获或冒泡阶段执行。)
           doc.addEventListener('DOMContentLoaded', recalc, false)//绑定浏览器缩放与加载时间
         })(document, window);
         //alert(document.documentElement.clientWidth/320)
