--- a/Backbone/demo01_backbone.html
+++ b/Backbone/demo01_backbone.html
@@ -44,6 +44,9 @@
   });
   //实例化AppView
   var appview = new AppView;
+  //这里面涉及到backbone的三个部分:
+  //View、Model、Collection
+  //其中Model代表一个数据模型，Collection是模型的一个集合，而View是用来处理页面以及简单的页面逻辑的。
   </script>
 </body>
 </html>
