--- a/Backbone/ToDos/index.html
+++ b/Backbone/ToDos/index.html
@@ -27,8 +27,8 @@
     <div class="view">
       <input type="checkbox" class="toggle" <%= completed ? 'checked':'' %>>
       <label><%= title %></label>
+      <input class="edit" type="text" value="<%= title %>" />
     </div>
-  
   </script>
   <script src="lib/jquery-3.2.1.js"></script>
   <script src="lib/underscore.js"></script>
