--- a/JavaScript练习/File upload/index.html
+++ b/JavaScript练习/File upload/index.html
@@ -20,7 +20,7 @@
   <div id="drop_area">将图片拖拽到此区域</div>
   <!--下面div预览区域-->
   <div id="preview"></div>
-  <script src="../js/jquery-3.2.1.js"></script>
+  <script src="../libs/jquery-3.2.1.js"></script>
   <script>
     //1:阻止浏览器默认行为
     $(document).on({
