--- a/JavaScript练习/ValidForm/demo01_二次验证.html
+++ b/JavaScript练习/ValidForm/demo01_二次验证.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="./js/jquery-1.9.1.min.js"></script>
-  <script src="./js/Validform_v5.3.2.js"></script>
+  <script src="../libs/jquery-3.2.1.js"></script>
+  <script src="../libs/Validform_v5.3.2.js"></script>
 </head>
 <body>
   <form action="">
