--- a/JavaScript练习/File upload/index.html
+++ b/JavaScript练习/File upload/index.html
@@ -56,7 +56,7 @@
       type:"POST",
       url:"upload.php",
       data:fd,
-      contentType:undefined,
+      contentType:false,
       processData:false,
       mimeType:"multipart/form-data",
       success:function(){
