--- a/代码练习/H5_sticky-footer完美的绝对底部.html
+++ b/代码练习/H5_sticky-footer完美的绝对底部.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<div id="wrap">
-		<div id="main">我是main内容</div>
+		<div id="main">我是main内容z</div>
 	</div>
 	<div id="footer">我是底部,利用margin-top=-100px显示</div>
 </body>
