--- a/代码练习/20_upload_image.html
+++ b/代码练习/20_upload_image.html
@@ -17,7 +17,6 @@
       width: 200px;
       padding: 20px;
     }
-
     input {
       margin: 5px;
       padding: 5px;
@@ -113,11 +112,13 @@
     function compressImg(file, quality) {
       return new Promise((resolve, reject) => {
         var img = new Image();
+        console.log('尺寸',file.size)
         img.src = URL.createObjectURL(file)
         img.onerror = error => reject(error)
         img.onload = () => {
           var canvas = document.createElement('canvas')
           var ctx = canvas.getContext('2d')
+           
           var canvasWidth = document.documentElement.clientWidth * window.devicePixelRatio
           var canvasHeight = document.documentElement.clientHeight * window.devicePixelRatio
           // 水平方向想缩放比
@@ -130,8 +131,11 @@
           const imageHeight = img.height * scale
           canvas.width = imageWidth
           canvas.height = imageHeight
+          console.log(imageWidth,imageHeight,img.width,img.height )
           ctx.drawImage(img, 0, 0, imageWidth, imageHeight)
           canvas.toBlob(file => resolve(file), "image/jpeg", quality);
+          var image = canvas.toDataURL("image/jpeg", 1)
+          console.log(image)
         }
       })
     }
@@ -139,7 +143,8 @@
     var preview3 = $('#preview3')
     file3.onchange = function () {
       var imgfile = this.files[0]
-      compressImg(imgfile, .5).then(blobFile => {
+      compressImg(imgfile, .8).then(blobFile => {
+        console.log('压缩后尺村',blobFile.size)
         var domImg = new Image();
         domImg.src = URL.createObjectURL(blobFile)
         preview3.appendChild(domImg)
