--- a/代码练习/20_upload_image.html
+++ b/代码练习/20_upload_image.html
@@ -65,11 +65,12 @@
       display: none
     }
   </style>
+  <script src="https://cdn.bootcss.com/exif-js/2.3.0/exif.js"></script>
 </head>
 
 <body>
   <label for="file1">单个图片上传</label>
-  <input type="file" accept="image/*"  id='file1' /> <br>
+  <input type="file" accept="image/*" id='file1' /> <br>
   <div id="preview1"></div>
   <hr>
   <label for="file2">多个图片上传</label>
@@ -79,6 +80,10 @@
   <label for="file3">压缩图片上传</label>
   <input type="file" accept="image/*" id='file3' /> <br>
   <div id="preview3"></div>
+  <hr>
+  <label for="file4">压缩图片旋转上传</label>
+  <input type="file" accept="image/*" id='file4' /> <br>
+  <div id="preview4"></div>
   <script>
     var $ = selector => document.querySelector(selector)
     // 图片实现本地预览
@@ -112,13 +117,11 @@
     function compressImg(file, quality) {
       return new Promise((resolve, reject) => {
         var img = new Image();
-        console.log('尺寸',file.size)
-        img.src = URL.createObjectURL(file)
-        img.onerror = error => reject(error)
+        console.log('尺寸', file.size)
         img.onload = () => {
           var canvas = document.createElement('canvas')
           var ctx = canvas.getContext('2d')
-           
+
           var canvasWidth = document.documentElement.clientWidth * window.devicePixelRatio
           var canvasHeight = document.documentElement.clientHeight * window.devicePixelRatio
           // 水平方向想缩放比
@@ -131,12 +134,14 @@
           const imageHeight = img.height * scale
           canvas.width = imageWidth
           canvas.height = imageHeight
-          console.log(imageWidth,imageHeight,img.width,img.height )
+          console.log(imageWidth, imageHeight, img.width, img.height)
           ctx.drawImage(img, 0, 0, imageWidth, imageHeight)
           canvas.toBlob(file => resolve(file), "image/jpeg", quality);
           var image = canvas.toDataURL("image/jpeg", 1)
           console.log(image)
         }
+        img.src = URL.createObjectURL(file)
+        img.onerror = error => reject(error)
       })
     }
     var file3 = $('#file3')
@@ -144,7 +149,7 @@
     file3.onchange = function () {
       var imgfile = this.files[0]
       compressImg(imgfile, .8).then(blobFile => {
-        console.log('压缩后尺村',blobFile.size)
+        console.log('压缩后尺村', blobFile.size)
         var domImg = new Image();
         domImg.src = URL.createObjectURL(blobFile)
         preview3.appendChild(domImg)
@@ -156,7 +161,7 @@
      * @param {File} file 待上传的文件
      * @return {Promise} 
      */
-    function uploadFile(file,url) {
+    function uploadFile(file, url) {
       return new Promise((resolve, reject) => {
         // 准备表单数据
         const formData = new FormData()
@@ -173,6 +178,68 @@
           }
         }
         xhr.send(formData)
+      })
+    }
+
+    function compressImg2(file, radio, Orientation) {
+      return new Promise((resolve, reject) => {
+
+        var img = new Image()
+        img.onload = function () {
+          var canvas = document.createElement('canvas')
+          var ctx = canvas.getContext('2d')
+          // 设置画布大小
+          var canvasWidth = document.documentElement.clientWidth * window.devicePixelRatio
+          var canvasHeight = document.documentElement.clientHeight * window.devicePixelRatio
+
+          var scaleX = canvasWidth / img.width
+          var scaleY = canvasHeight / img.height
+          var scale = Math.min(scaleX, scaleY)
+          var imgWidth = img.width * scale
+          var imgHeight = img.height * scale
+          EXIF.getData(file, function () {
+            var Orientation = EXIF.getTag(this, 'Orientation');
+            alert(Orientation)
+            if (Orientation && Orientation != 1) {
+              switch (Orientation) {
+                case 6:     // 旋转90度
+                  canvas.width = imgHeight;
+                  canvas.height = imgWidth;
+                  ctx.rotate(Math.PI / 2);
+                  // (0,-imgHeight) 从旋转原理图那里获得的起始点
+                  ctx.drawImage(img, 0, -imgHeight, imgWidth, imgHeight);
+                  break;
+                case 3:     // 旋转180度
+                  ctx.rotate(Math.PI);
+                  ctx.drawImage(img, -imgWidth, -imgHeight, imgWidth, imgHeight);
+                  break;
+                case 8:     // 旋转-90度
+                  canvas.width = imgHeight;
+                  canvas.height = imgWidth;
+                  ctx.rotate(3 * Math.PI / 2);
+                  ctx.drawImage(img, -imgWidth, 0, imgWidth, imgHeight);
+                  break;
+              }
+            } else {
+              canvas.width = imgWidth;
+              canvas.height = imgHeight;
+              ctx.drawImage(img, 0, 0, imgWidth, imgHeight)
+            }
+            resolve(canvas.toDataURL("image/jpeg", .8))
+          })
+        }
+        img.src = URL.createObjectURL(file)
+        img.onerror = error => reject(error)
+      })
+    }
+    var file4 = $('#file4')
+    var preview4 = $('#preview4')
+    file4.onchange = function () {
+      var imgfile = this.files[0]
+      compressImg2(imgfile, .8).then(dataUrl => {
+        var domImg = new Image();
+        domImg.src = dataUrl
+        preview4.appendChild(domImg)
       })
     }
   </script>
